fixed bug: deleted own entries visible for resource provider

--- a/bpt-resource-management-vaadin/WebContent/VAADIN/themes/bpt/styles.css
+++ b/bpt-resource-management-vaadin/WebContent/VAADIN/themes/bpt/styles.css
@@ -95,6 +95,16 @@ ul#resource-list {
 	margin-left: -1em;
 }
 
+#resource-list div[class="Download"]:before {
+	content: "Download URL";
+}
+#resource-list div[class="Documentation"]:before {
+	content: "Documentation URL";
+}
+#resource-list div[class="Screencast"]:before {
+	content: "Screencast URL";
+}
+
 #resource-list div[class="Description"],
 #resource-list div[class="Provider"],
 #resource-list div[class="Download"],
